[package]
name = "nel"
version = "0.1.0"
authors = ["Brendan McMillion <brendan@cloudflare.com>"]
edition = "2018"

[dependencies]
deadqueue = { version = "0.2", features = ["limited"] }
futures = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.17", default-features = false }
