[package]
name = "nel"
version = "0.1.1"
authors = ["Brendan McMillion <brendan@cloudflare.com>"]
edition = "2018"

[dependencies]
deadqueue = { version = "0.2", features = ["limited"] }
futures = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.19", default-features = false }
reqwest = { version = "0.11", default-features = false, optional = true }
hyper = { version = "0.14", default-features = false, optional = true }

[features]
default = ["reqwest-error"]
reqwest-error = ["reqwest", "hyper"]

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"]}
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "native-tls"]}