[package]
name = "nel"
description = "Basic utilities for building and sending NEL reports."
version = "0.1.5"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>", "Brendan McMillion"]
license = "BSD-3-Clause"
repository = "https://github.com/cloudflare/nel-rs"
edition = "2018"

[dependencies]
deadqueue = { version = "0.2", features = ["limited"] }
futures-util = "0.3.17"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.21", default-features = false }
ttl_cache = "0.5.1"
url = "2.2.2"
rand = "0.8.4"

reqwest = { version = "0.11", default-features = false, optional = true }
hyper = { version = "0.14", default-features = false, optional = true }

[features]
default = ["reqwest-error"]
reqwest-error = ["reqwest", "hyper"]

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "native-tls"] }
hyper-tls = { version = "0.5", default-features = false }
